deploy: b316f6ce212295d4010131fe65b9f80cc66682e5

--- a/rhoai-demo-instr/2.12/LABENV/index.html
+++ b/rhoai-demo-instr/2.12/LABENV/index.html
@@ -116,6 +116,13 @@
 </aside>
 <article class="doc">
 <h1 class="page">Lab Environment</h1>
+<div id="preamble">
+<div class="sectionbody">
+<div class="paragraph">
+<p>Instructions for creating a Red Hat OpenShift AI environment that is capable of running multiple LLMs, pipelines, Model Serving and performing just about every task that is possible with OpenShift AI.</p>
+</div>
+</div>
+</div>
 <div class="sect1">
 <h2 id="_openshift_container_cluster_platform_ocp_environment"><a class="anchor" href="#_openshift_container_cluster_platform_ocp_environment"></a>OpenShift Container Cluster Platform (OCP) Environment</h2>
 <div class="sectionbody">
