deploy: 2f4a86654e1abed85013d73b8a3a1bbda259eee8

--- a/rhoai-demo-instr/2.12/LABENV/minio-install.html
+++ b/rhoai-demo-instr/2.12/LABENV/minio-install.html
@@ -61,7 +61,7 @@
 <ul class="nav-list">
   <li class="nav-item" data-depth="1">
     <button class="nav-item-toggle"></button>
-    <a class="nav-link" href="../chapter2/index.html">TL3 Course Design AsciiDocs</a>
+    <a class="nav-link" href="../chapter2/index.html">TL3 Course Edit Guide</a>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="../chapter2/section1.html">Section 1</a>
@@ -410,7 +410,7 @@ spec:
 </div>
 <nav class="pagination">
   <span class="prev"><a href="index.html">Lab Environment</a></span>
-  <span class="next"><a href="../chapter2/index.html">TL3 Course Design AsciiDocs</a></span>
+  <span class="next"><a href="../chapter2/index.html">TL3 Course Edit Guide</a></span>
 </nav>
 </article>
   </div>
