deploy: c8cd200c5715e2bce3fefa9bbf1d49ed31b45d1d

--- a/rhoai-demo-instr/2.12/index.html
+++ b/rhoai-demo-instr/2.12/index.html
@@ -131,7 +131,7 @@
 <h2 id="_introduction"><a class="anchor" href="#_introduction"></a>Introduction</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Course Title: OpenShift AI Lab environment instructions</p>
+<p>Course Title: This is a demo</p>
 </div>
 <div class="paragraph">
 <p>Description:
