--- a/rhoai-demo-instr/2.12/index.html
+++ b/rhoai-demo-instr/2.12/index.html
@@ -72,7 +72,7 @@
 <ul class="nav-list">
   <li class="nav-item" data-depth="1">
     <button class="nav-item-toggle"></button>
-    <a class="nav-link" href="chapter2/index.html">TL3 Course Edit Guide</a>
+    <a class="nav-link" href="chapter2/index.html">TL3 Course Edit Guide [Update]</a>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="chapter2/section1.html">Section 1</a>
@@ -131,7 +131,7 @@
 <h2 id="_introduction"><a class="anchor" href="#_introduction"></a>Introduction</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Course Title: This is a demo</p>
+<p>Course Title: This is a demo for how to create a lab environment&#8230;&#8203;..</p>
 </div>
 <div class="paragraph">
 <p>Description:
