--- a/rhoai-demo-instr/2.12/LABENV/red-hat-docs.html
+++ b/rhoai-demo-instr/2.12/LABENV/red-hat-docs.html
@@ -73,7 +73,7 @@
 <ul class="nav-list">
   <li class="nav-item" data-depth="1">
     <button class="nav-item-toggle"></button>
-    <a class="nav-link" href="../chapter2/index.html">TL3 Course Edit Guide</a>
+    <a class="nav-link" href="../chapter2/index.html">TL3 Course Edit Guide [Update]</a>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="../chapter2/section1.html">Section 1</a>
@@ -164,7 +164,7 @@
 </div>
 <nav class="pagination">
   <span class="prev"><a href="hyperscaler_lab_env.html">Cloud Provider Lab Environments</a></span>
-  <span class="next"><a href="../chapter2/index.html">TL3 Course Edit Guide</a></span>
+  <span class="next"><a href="../chapter2/index.html">TL3 Course Edit Guide [Update]</a></span>
 </nav>
 </article>
   </div>
