--- a/rhoai-demo-instr/2.12/LABENV/minio-install.html
+++ b/rhoai-demo-instr/2.12/LABENV/minio-install.html
@@ -130,7 +130,7 @@
 <article class="doc">
 <h1 class="page">MinIO S3 Compatible Storage Setup</h1>
 <div class="sect1">
-<h2 id="_deploy_minio_as_s3_compatible_storage"><a class="anchor" href="#_deploy_minio_as_s3_compatible_storage"></a>Deploy MinIO as S3 compatible storage</h2>
+<h2 id="_deploy_minio_as_s3_compatible_storage_update_this"><a class="anchor" href="#_deploy_minio_as_s3_compatible_storage_update_this"></a>Deploy MinIO as S3 compatible storage [Update this&#8230;&#8203;]</h2>
 <div class="sectionbody">
 <div class="sect2">
 <h3 id="_minio_overview"><a class="anchor" href="#_minio_overview"></a>MinIO overview</h3>
