--- a/rhoai-demo-instr/2.12/index.html
+++ b/rhoai-demo-instr/2.12/index.html
@@ -138,7 +138,7 @@
 Course description: Instructions on how to create a lab environment for OpenShift AI 2.12</p>
 </div>
 <div class="paragraph">
-<p>Duration: 1 hour</p>
+<p>Duration: 2 hours</p>
 </div>
 </div>
 </div>
