--- a/rhoai-demo-instr/2.12/index.html
+++ b/rhoai-demo-instr/2.12/index.html
@@ -137,6 +137,50 @@
   <li class="nav-item" data-depth="0">
 <ul class="nav-list">
   <li class="nav-item" data-depth="1">
+    <button class="nav-item-toggle"></button>
+    <a class="nav-link" href="chapter6/index.html">Agentic AI Placeholder</a>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="chapter6/section1.html">blank</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="chapter6/section2.html">blank</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="chapter6/section3.html">blank</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="chapter6/section4.html">blank</a>
+  </li>
+</ul>
+  </li>
+</ul>
+  </li>
+  <li class="nav-item" data-depth="0">
+<ul class="nav-list">
+  <li class="nav-item" data-depth="1">
+    <button class="nav-item-toggle"></button>
+    <a class="nav-link" href="chapter5/index.html">LLM optimization and inference efficiency</a>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="chapter5/section1.html">blank</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="chapter5/section2.html">blank</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="chapter5/section3.html">blank</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="chapter5/section4.html">blank</a>
+  </li>
+</ul>
+  </li>
+</ul>
+  </li>
+  <li class="nav-item" data-depth="0">
+<ul class="nav-list">
+  <li class="nav-item" data-depth="1">
     <a class="nav-link" href="appendix/appendix.html">Appendix</a>
   </li>
 </ul>
@@ -154,7 +198,7 @@
     <a class="nav-link" href="LABENV/oai_install.html">OpenShift AI Install</a>
   </li>
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="LABENV/minio-install.html">Lab 1: Foundational Model Serving with Red Hat AI Inference Server</a>
+    <a class="nav-link" href="LABENV/minio-install.html">MinIO S3 Compatible Storage Setup</a>
   </li>
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="LABENV/hyperscaler_lab_env.html">Cloud Provider Lab Environments</a>
@@ -170,10 +214,19 @@
 <ul class="nav-list">
   <li class="nav-item" data-depth="1">
     <button class="nav-item-toggle"></button>
-    <a class="nav-link" href="chapter2/index.html">TL3 Course Edit Guide [Update]</a>
+    <a class="nav-link" href="chapter2/index.html">Red Hat AI Inference Server</a>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="chapter2/section1.html">Section 1</a>
+    <a class="nav-link" href="chapter2/section1.html">Lab 1: Model Serving with Red Hat AI Inference Server</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="chapter2/section2.html">Sizing for GPUs</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="chapter2/section3.html">GPU Sharing Technologies</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="chapter2/vllm-adv.html">Advanced vLLM Configuration</a>
   </li>
 </ul>
   </li>
